Missing Testimonials, Contact & Animations

--- a/src/components/sections/Cases.astro
+++ b/src/components/sections/Cases.astro
@@ -28,7 +28,7 @@ import larrow from "../../assets/icon3.svg";
 import SectionTitle from "../ui/SectionTitle.astro";
 ---
 
-<Section>
+<Section id="cases">
   <SectionTitle
     sectionTitle="Case Studies"
     description="Explore Real-Life Examples of Our Proven Digital Marketing Success through Our Case Studies"
