--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -4,8 +4,8 @@ import SectionTitle from "../ui/SectionTitle.astro";
 import Section from "./Section.astro";
 ---
 
-<Section>
-  <div class="mb-[140px]">
+<Section id="contact">
+  <div class="mb-[140px] relative">
     <SectionTitle
       sectionTitle="Contact Us"
       description="Connect with Us: Let's Discuss Your Digital Marketing Needs"
