--- a/src/components/sections/Team.astro
+++ b/src/components/sections/Team.astro
@@ -67,7 +67,7 @@ const team = [
 ];
 ---
 
-<Section>
+<Section id="about">
   <div class="mt-[140px]">
     <SectionTitle sectionTitle="Team" description={description} />
     <div
