--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -4,7 +4,7 @@ import SwiperSlider from "../ui/SwiperSlider.astro";
 import Section from "./Section.astro";
 ---
 
-<Section>
+<Section id="testimonials">
   <div class="mt-20">
     <SectionTitle
       sectionTitle="Testimonials"
