--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -12,15 +12,15 @@ const navLinks = [
   },
   {
     name: "Use cases",
-    href: "#usecases",
+    href: "#cases",
   },
   {
-    name: "Pricing",
-    href: "#pricing",
+    name: "Testimonials",
+    href: "#testimonials",
   },
   {
-    name: "Blog",
-    href: "#blog",
+    name: "Contact",
+    href: "#contact",
   },
 ];
 
