--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -15,9 +15,9 @@ const logos = [
 const links = [
   { name: "About us", href: "#about" },
   { name: "Services", href: "#services" },
-  { name: "Use Cases", href: "#usecases" },
-  { name: "Pricing", href: "#pricing" },
-  { name: "Blog", href: "#blog" },
+  { name: "Use Cases", href: "#cases" },
+  { name: "Pricing", href: "#" },
+  { name: "Blog", href: "#" },
 ];
 ---
 
@@ -88,9 +88,24 @@ const links = [
       <div
         class="flex flex-col lg:flex-row h-20 justify-center mt-4 text-center md:justify-between md:mt-0"
       >
-        <span>@2024 Positivus</span>&nbsp
+        <span
+          >2024 Positivus - Made With <a
+            class="underline"
+            target="_blank"
+            href="https://astro.build/">Astro</a
+          ></span
+        >&nbsp
         <span>
-          <a href="/">Terms of use</a> & <a href="/">Privacy policy</a>
+          <a
+            href="https://www.olgaskuja.design/"
+            target="_blank"
+            class="underline">Credit (Olga Skuja)</a
+          ><span> &</span>
+          <a
+            class="underline"
+            href="https://creativecommons.org/licenses/by/4.0/"
+            target="_blank">Licence</a
+          >
         </span>
       </div>
     </div>
