--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -66,7 +66,7 @@ const description =
 ---
 
 <Section>
-  <div class="mt-[140px]">
+  <div class="mt-[140px] mb-5">
     <SectionTitle sectionTitle="Services" description={description} />
     <div class="grid lg:grid-cols-2 lg:grid-rows-3 gap-10">
       {
