--- a/src/components/ui/SwiperSlider.astro
+++ b/src/components/ui/SwiperSlider.astro
@@ -1,63 +1,89 @@
 ---
 const slides = [
-  { index: 1, name: "First", description: "This is the first slide" },
-  { index: 2, name: "Second", description: "This is the second slide" },
-  { index: 3, name: "Third", description: "This is the third slide" },
-  { index: 4, name: "Fourth", description: "This is the fourth slide" },
-  { index: 5, name: "Fifth", description: "This is the fifth slide" },
-  { index: 6, name: "Sixth", description: "This is the sixth slide" },
-  { index: 7, name: "Seventh", description: "This is the seventh slide" },
-  { index: 8, name: "Eighth", description: "This is the eighth slide" },
-  { index: 9, name: "Ninth", description: "This is the ninth slide" },
+  { index: 1, name: "John Smith", description: "Marketing dierector at XYZ" },
+  { index: 2, name: "John Smith", description: "Marketing dierector at XYZ" },
+  { index: 3, name: "John Smith", description: "Marketing dierector at XYZ" },
+  { index: 4, name: "John Smith", description: "Marketing dierector at XYZ" },
+  { index: 5, name: "John Smith", description: "Marketing dierector at XYZ" },
 ];
 ---
 
-<section id="ProjectSlider" class="swiper mt-10 h-auto">
-  <div class="swiper-wrapper" data-cursor="swipe">
+<div id="ProjectSlider" class="swiper mt-10">
+  <div class="swiper-wrapper mt-[84px] mb-[124px]" data-cursor="swipe">
     {
       slides.map((slide) => (
         <div
-          class="swiper-slide"
+          class="swiper-slide text-white flex flex-col"
           role="group"
           aria-label={`${slide.index} / ${slides.length}`}
         >
-          <div class="flex flex-col justify-center items-center text-black h-40">
-            <h2>{slide.name}</h2>
-            <p>{slide.description}</p>
+          <div class="flex flex-col justify-center items-center py-[48px] px-[52px]">
+            <p class="bubble">
+              "We have been working with Positivus for the past year and have
+              seen a significant increase in website traffic and leads as a
+              result of their efforts. The team is professional, responsive, and
+              truly cares about the success of our business. We highly recommend
+              Positivus to any company looking to grow their online presence."
+            </p>
+          </div>
+          <div class="w-full px-20 ">
+            <div class="text-green font-medium">{slide.name}</div>
+            <div>{slide.description}</div>
           </div>
         </div>
       ))
     }
   </div>
-  <div class="flex justify-around mt-5">
-    <div class="swiper-button-prev">PREV</div>
-    <div class="swiper-button-next">NEXT</div>
+  <div class="flex justify-center mb-[68px] gap-[189px]">
+    <div class="swiper-button-prev w-10 h-10">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+        ><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+        <path
+          fill="#ffffff"
+          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
+        ></path></svg
+      >
+    </div>
+    <div class="swiper-pagination h-10 w-20 bg-white">Hi</div>
+    <div class="swiper-button-next w-10 h-10 rotate-180">
+      <svg xmlns="http://www.w3.org/2000/svg " viewBox="0 0 448 512"
+        ><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+        <path
+          fill="#ffffff"
+          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
+        ></path></svg
+      >
+    </div>
   </div>
-  <div class="flex justify-center">
-    <div class="swiper-pagination"></div>
-  </div>
-</section>
+</div>
 <script>
   import "swiper/css";
   import Swiper from "swiper";
   import { register } from "swiper/element/bundle";
   register();
 
-  const swiper = new Swiper("#ProjectSlider", {
-    loop: true,
-    autoplay: false,
-    grabCursor: false,
-    mousewheel: false,
-    slidesPerView: 3,
-    centeredSlides: true,
-    spaceBetween: 30,
+  new Swiper("#ProjectSlider", {
     pagination: {
       el: ".swiper-pagination",
-      type: "fraction",
     },
     navigation: {
       nextEl: ".swiper-button-next",
       prevEl: ".swiper-button-prev",
+    },
+    loop: true,
+    autoplay: false,
+    grabCursor: false,
+    mousewheel: false,
+    slidesPerView: 2,
+    centeredSlides: true,
+    spaceBetween: 50,
+    breakpoints: {
+      1024: {
+        slidesPerView: 2,
+      },
+      320: {
+        slidesPerView: 1,
+      },
     },
   });
 </script>
@@ -67,15 +93,38 @@ const slides = [
   }
   .swiper-slide {
     display: flex;
-    background: #eee;
     align-items: center;
     justify-content: center;
     transition: all 500ms ease-in-out;
-    scale: 0.8;
+  }
+  .swiper-slide-active {
+  }
+  .bubble {
+    position: relative;
+    padding: 45px;
+    background-color: var(--dark);
+    color: var(--white);
+    border-radius: 45px;
+    border: 1px solid var(--green);
   }
 
-  .swiper-slide-active {
-    scale: 1.1;
-    background: #fc0;
+  .bubble:after {
+    content: "";
+    position: absolute;
+    bottom: -20px; /* Adjust this value to move the arrow up or down */
+    left: 50px; /* Adjust this value to move the arrow left or right */
+    border-width: 22px; /* Adjust this value to change the size of the arrow */
+    border-style: solid;
+    border-color: var(--dark) transparent transparent var(--dark);
+  }
+
+  .bubble:before {
+    content: "";
+    position: absolute;
+    bottom: -40px; /* This should be 2px more than the bottom value of .bubble:after */
+    left: 48px; /* This should be 1px less than the left value of .bubble:after */
+    border-width: 20px; /* Adjust this to match the border-width of .bubble:after */
+    border-style: solid;
+    border-color: var(--green) transparent transparent var(--green);
   }
 </style>
