--- a/src/components/ui/ServiceCard.astro
+++ b/src/components/ui/ServiceCard.astro
@@ -19,12 +19,10 @@ const { index, titleTop, titleBottom, img, alt, link } = Astro.props;
     class=`h-[300px] w-full sm:h-full lg:gap-[60px] grid custom-grid lg:grid-cols-2 lg:grid-rows-1 p-8 sm:p-[50px] rounded-[45px] ${index === 1 ? 'bg-white' : index === 2 ? 'bg-green' : 'bg-dark text-white'}`
   >
     <h3 class=`flex flex-col col-span-2 lg:col-span-1`>
-      <span
-        class=`w-[fit-content] ${index === 1 ? 'greenhead' : index === 2 ? 'whitehead' : 'blackhead'}`
+      <span class=`w-[fit-content] ${index === 1 ? 'greenhead' : 'whitehead'}`
         >{titleTop}</span
       >
-      <span
-        class=`w-[fit-content] ${index === 1 ? 'greenhead' : index === 2 ? 'whitehead' : 'blackhead'}`
+      <span class=`w-[fit-content] ${index === 1 ? 'greenhead' : 'whitehead'}`
         >{titleBottom}</span
       >
     </h3>
