--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -12,7 +12,7 @@ import Section from "./Section.astro";
       <h1>Navigating the digital landscape for success</h1>
     </div>
     <picture class="row-span-1 md:row-span-3">
-      <Image src={HeroIlust} alt="Hero Ilustration" />
+      <Image src={HeroIlust} alt="Hero Ilustration" loading="eager" />
     </picture>
     <div class="w-full lg:w-[66.5%]">
       <p class="my-[35px]">
