--- a/src/components/sections/Proposal.astro
+++ b/src/components/sections/Proposal.astro
@@ -24,7 +24,7 @@ import propImg from "../../assets/pics/proposal-pic.png";
       >
         <Image
           src={propImg}
-          alt="Hero Image"
+          alt="This is an illustration"
           class="hidden md:flex lg:h-full lg:w-auto"
         />
       </picture>
