--- a/src/components/sections/Team.astro
+++ b/src/components/sections/Team.astro
@@ -18,7 +18,7 @@ import {
 const team = [
   {
     pic: p1,
-    name: "John Smith",
+    name: "Maria Katz",
     role: "CEO",
     description:
       "3+ years of experience in paid search advertising. Skilled in campaign management and performance analysis",
@@ -26,7 +26,7 @@ const team = [
   },
   {
     pic: p2,
-    name: "John Smith",
+    name: "Maria Katz",
     role: "CEO",
     description:
       "3+ years of experience in paid search advertising. Skilled in campaign management and performance analysis",
@@ -34,7 +34,7 @@ const team = [
   },
   {
     pic: p3,
-    name: "John Smith",
+    name: "Maria Katz",
     role: "CEO",
     description:
       "3+ years of experience in paid search advertising. Skilled in campaign management and performance analysis",
@@ -42,7 +42,7 @@ const team = [
   },
   {
     pic: p4,
-    name: "John Smith",
+    name: "Maria Katz",
     role: "CEO",
     description:
       "3+ years of experience in paid search advertising. Skilled in campaign management and performance analysis",
@@ -50,7 +50,7 @@ const team = [
   },
   {
     pic: p5,
-    name: "John Smith",
+    name: "Maria Katz",
     role: "CEO",
     description:
       "3+ years of experience in paid search advertising. Skilled in campaign management and performance analysis",
@@ -58,7 +58,7 @@ const team = [
   },
   {
     pic: p6,
-    name: "John Smith",
+    name: "Maria Katz",
     role: "CEO",
     description:
       "3+ years of experience in paid search advertising. Skilled in campaign management and performance analys",
