--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -16,8 +16,8 @@ const links = [
   { name: "About us", href: "#about" },
   { name: "Services", href: "#services" },
   { name: "Use Cases", href: "#cases" },
-  { name: "Pricing", href: "#" },
-  { name: "Blog", href: "#" },
+  { name: "Pricing", href: "#Testimonials" },
+  { name: "Blog", href: "#Home" },
 ];
 ---
 
