--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -40,7 +40,7 @@ import brand from "../../assets/brand.svg";
     <!-- Brand -->
     <div class="pl-4 xl:flex-none">
       <a href="#home">
-        <Image src={brand} alt="Brand Logo" class="w-[219px]" />
+        <Image src={brand} alt="Brand Logo" class="w-[219px]" loading="eager" />
       </a>
     </div>
 
