--- a/src/components/sections/Cases.astro
+++ b/src/components/sections/Cases.astro
@@ -41,7 +41,7 @@ import SectionTitle from "../ui/SectionTitle.astro";
             <div class="flex flex-col gap-5">
               <p>{card.title}</p>
               <a href={card.link} class="flex items-center gap-[15px]">
-                <span class="text-green">Learn More</span>
+                <span class="text-green">Case Info</span>
                 <picture>
                   <Image src={larrow} alt="Arrow pointing up right" />
                 </picture>
