--- a/src/components/ui/ShortForm.astro
+++ b/src/components/ui/ShortForm.astro
@@ -10,10 +10,7 @@
       class="bg-transparent w-full px-[35px] py-5 border rounded-[14px] focus:outline-none"
     />
   </div>
-  <button
-    type="submit"
-    name="submit"
-    class="w-full sm:w-[45%] py-5 px-[35px] bg-green text-black rounded-[14px]"
+  <button type="submit" name="submit" class="w-full sm:w-[45%] btn-tertiary"
     >Talk with us</button
   >
 </form>
