--- a/src/components/ui/ServiceCard.astro
+++ b/src/components/ui/ServiceCard.astro
@@ -38,7 +38,7 @@ const { index, titleTop, titleBottom, img, alt, link } = Astro.props;
     <div class="flex items-end">
       <a href={link} class="flex items-center gap-3.5"
         ><Image src={index === 1 || index === 2 ? gob : wob} alt={alt} />
-        <span class="hidden sm:block">Learn More</span></a
+        <span class="hidden sm:block">Service Info</span></a
       >
     </div>
   </div>
